deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maha
  labels:
    name: maha
    environment: production
